# wasm-serde-dynamodb-item

./: Cargo.toml
src/: de.rs  lib.rs
src/de/: attribute_value.rs
