[package]
name = "serde-dynamodb-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.1"
wasm-bindgen = { version = "0.2.84", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
